Release `v1.0.15`. (#19)
* Release `v1.0.15`.

* Added `ClassFile` for class files utility methods.

* Added tests for the correct Java version.

* Minor refactor.

* Update change log.

* Updated change log.

* Added Maven compiler release property.

* Renamed `ClassFile` to `JavaClassFile`.

* Updated change log.

* Added missing copyright.

* More test coverage.

* `GenericType` can now be equal to any `ParameterizedType`.

* More test coverage.

* Added `Methods.getOneDeclared`.

* Enforce `GenericClass` to only accept generic classes.

* Updated tests.

* More accurate exception error messages.

* Added `Methods.invoke` to invoke accessible methods.

* Allow setting of null getter method.

* Fix `ExtendedField.getGenericReturnType`.

* Method rename in `ConstantPoolAccessor`.

* Test for inaccessible methods.

* Renamed some `Constructors` methods.